# helicoid

./: .gitmodules  Cargo.toml  LICENSE  README.md  skia_safe.patch
helicoid-client/: Cargo.toml
helicoid-client/src/: command_line.rs  dimensions.rs  main.rs  redraw_scheduler.rs
helicoid-client/src/bridge/: mod.rs
helicoid-client/src/editor/: editor.rs  mod.rs
helicoid-client/src/nv_editor/: window.rs
helicoid-client/src/renderer/: animation_utils.rs  block_renderer.rs  mod.rs  rendered_window.rs  text_box_renderer.rs  text_renderer.rs
helicoid-client/src/renderer/cursor_renderer/: cursor_vfx.rs  mod.rs
helicoid-client/src/renderer/fonts/: blob_builder.rs  caching_shaper.rs  font_loader.rs  font_options.rs  mod.rs  swash_font.rs
helicoid-client/src/window/: keyboard_manager.rs  mod.rs  mouse_manager.rs  renderer.rs
helicoid-eguiclient/: Cargo.toml
helicoid-eguiclient/src/: main.rs
helicoid-eguiclient/src/renderer/cursor_renderer/: mod.rs
helicoid-gpurender/: Cargo.toml
helicoid-gpurender/shaders/: text.fs.wgsl  text.vs.wgsl  text_mono.fs.wgsl
helicoid-gpurender/src/: fontcache.rs  lib.rs  swash_font.rs  text_renderer.rs  texture_atlases.rs  texture_map.rs
helicoid-gpurender/src/font/: fontcache.rs  mod.rs  swash_font.rs  texture_atlases.rs
helicoid-gpurender/src/renderer/: block_renderer.rs  fontconverter.rs  grid_renderer.rs  mod.rs  text_box_renderer.rs  text_renderer.rs
helicoid-helixserver/: Cargo.toml
helicoid-helixserver/src/: center.rs  constants.rs  editor.rs  editor_view.rs  main.rs  server.rs  statusline.rs
helicoid-helixserver/src/tests/: center.rs  mod.rs
helicoid-protocol/: Cargo.toml
helicoid-protocol/src/: block_manager.rs  bridge_logic.rs  caching_shaper.rs  dataflow.rs  font_options.rs  gfx.rs  input.rs  lib.rs  shadowblocks.rs  tcp_bridge.rs  tcp_bridge_async.rs  tcp_bridge_sync.rs  text.rs  transferbuffer.rs
helicoid-testserver/: Cargo.toml
helicoid-testserver/src/: main.rs  testserver.rs
helicoid-wgpu/: Cargo.toml
helicoid-wgpu/shaders/: text.fs.wgsl  text.vs.wgsl  text_mono.fs.wgsl
helicoid-wgpu/src/: main.rs
src/: dimensions.rs  main.rs
src/bridge/: mod.rs
src/editor/: cursor.rs  mod.rs
src/renderer/: grid_renderer.rs  mod.rs  profiler.rs  rendered_window.rs  text_renderer.rs
src/renderer/cursor_renderer/: cursor_vfx.rs  mod.rs
src/renderer/fonts/: blob_builder.rs  caching_shaper.rs  font_loader.rs  font_options.rs  mod.rs
src/window/: draw_background.rs  keyboard_manager.rs  mod.rs  mouse_manager.rs  settings.rs
