[workspace]
members = [
#    "helicoid-client",
    "helicoid-protocol",
    "helicoid-helixserver",
    "helicoid-testserver",
    "helicoid-gpurender",
    "helicoid-wgpu",
    "helicoid-client",
]

default-members = [
    "helicoid-wgpu"
]
resolver = "2"

[patch.crates-io]
rkyv = { git = "https://github.com/rkyv/rkyv.git"}
ordered-float = { git = "https://github.com/freqmod/rust-ordered-float.git"}
wgpu = { git =  "https://github.com/freqmod/wgpu.git", branch ="alt_blend_tmp"}
naga = { git =  "https://github.com/freqmod/naga.git", branch ="alt_blend"}
#winit = { git = "https://github.com/freqmod/winit.git", branch="keys"}

# Needed by helix repo crates (helix-core etc.)
[workspace.dependencies]
tree-sitter = { version = "0.20", git = "https://github.com/tree-sitter/tree-sitter", rev = "7d4b0110a9e92161d247a051018ee42b0513e98d" }