[package]
name = "helicoid-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
helicoid-protocol = {path="../helicoid-protocol", features = ["tokio"]}
copypasta = "0.8.1"
async-trait = "0.1.53"
backtrace = "0.3.67"
cfg-if = "1.0.0"
clap = { version = "4.0.32", features = ["cargo", "derive", "env"] }
csscolorparser = "0.6.2"
derive-new = "0.5.9"
dirs = "4.0.0"
euclid = "0.22.7"
flexi_logger = { version = "0.22.3", default-features = false }
env_logger = {version = "0.10" }
futures = "0.3.21"
glutin = "0.30.3"
glutin-winit = { version = "0.3.0"}
raw-window-handle = { version ="0.5.0" }
gl = "0.14.0"
image = { version = "0.24.1", default-features = false, features = ["ico"] }
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4.16"
lru = "0.9"
#nvim-rs = { git = "https://github.com/KillTheMule/nvim-rs", branch = "master", features = ["use_tokio"] }
parking_lot = "0.12.0"
pin-project = "1.0.10"
rand = "0.8.5"
rmpv = "1.0.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
shlex = "1.1.0"
swash = "0.1.6"
time = "0.3.9"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.1", features = ["compat"] }
unicode-segmentation = "1.10.0"
which = "4.2.5"
winit = { version = "0.28"}
xdg = "2.4.1"
smallvec = {version = "1.10", features = ["serde", "const_generics"]}
half = {version = "2.1", features=["serde", "bytemuck"]}
rkyv = { version = "0.7", features = ["validation", "smallvec"] }
ordered-float = { version = "3.0", features = ["bytemuck", "rkyv", "serde"]}
anyhow = {version="1.0.68"}
#skia-safe = {path = "/home/freqmod/Downloads/rust-skia/skia-safe/",features = ["gl"]}
skia-safe = {version="0.58",features = ["gl"]}


[dev-dependencies]
mockall = "0.11.0"


#[target.'cfg(linux)'.dependencies.skia-safe]
#path = "/home/freqmod/Downloads/rust-skia/skia-safe/"
#features = ["gl", "egl"]
#version = "0.57.0"

#[target.'cfg(not(linux))'.dependencies.skia-safe]
#version = "0.57.0"
