[package]
name = "helicoid-gpurender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lyon = { git = "https://github.com/nical/lyon", features = ["extra"] }
env_logger = "0.9.0"

winit = "0.28"
bytemuck = "1.13.0"
