[package]
name = "helicoid-gpurender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lyon = { git = "https://github.com/nical/lyon", features = ["extra"] }
env_logger = "0.9.0"

winit = "0.29.0-beta.0"
bytemuck = "1.13.0"
cosmic-text = {version="0.9.0"}
swash = {version="0.1.8"}
wgpu = { git =  "https://github.com/freqmod/wgpu.git", branch ="alt_blend"}
naga = { git =  "https://github.com/freqmod/naga.git", branch ="alt_blend"}

[dev-dependencies]
svg = {version="0.13.1"}