[package]
name = "helicoid-gpurender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lyon = { git = "https://github.com/nical/lyon", features = ["extra"] }
env_logger = "0.9.0"

winit = "0.29.0-beta.0"
bytemuck = "1.13.0"
cosmic-text = {version="0.9.0"}
swash = {version="0.1.8"}
wgpu = { git =  "https://github.com/freqmod/wgpu.git", branch ="alt_blend"}
naga = { git =  "https://github.com/gfx-rs/naga.git", branch ="master"}

copypasta = "0.8.1"

helicoid-protocol = {path="../helicoid-protocol"}
rkyv = { version = "0.8", features = ["validation", "smallvec"] }
ordered-float = { version = "3.0", features = ["bytemuck", "rkyv", "serde"]}
anyhow = {version="1.0"}
hashbrown = {version = "0.13.2"}
ahash = {version = "0.8.3"}
smallvec = {version = "1.10", features = ["serde", "const_generics"]}
parking_lot = "0.12.0"
log = "0.4"
num_enum="0.6.1"
 
[dev-dependencies]
svg = {version="0.13.1"}