[package]
name = "helicoid-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.0"
log = "0.4.16"
smallvec = {version = "1.10", features = ["serde", "const_generics"]}
half = {version = "2.1", features=["serde", "bytemuck"]}
rkyv = { version = "0.7", features = ["validation", "smallvec"] }
ordered-float = { version = "3.0", features = ["bytemuck", "rkyv", "serde"]}

