[package]
name = "helicoid-wgpu"
version = "0.1.0"
authors = ["Frederik Vestre <freqmod@gmail.com"]
workspace = ".."
edition = "2021"

[[bin]]
name = "wgpu"
path = "src/main.rs"

[dependencies]
lyon = { git = "https://github.com/nical/lyon", features = ["extra"] }

helicoid-gpurender = { path = "../helicoid-gpurender" }
swash = {version="0.1.8"}

env_logger = "0.9.0"

wgpu = "0.17"
winit = "0.29.0-beta.0"
futures = "0.3.5"
bytemuck = "1.13.0"
